[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["KSticc <k.allen19133@gmail.com>"]
description = ""
name = "sentry-bot"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
discord = "^1.0"
flask = "^1.1"
python = "^3.7"
python-dotenv = "^0.12.0"
"discord.py" = "^1.3"
[tool.poetry.dev-dependencies]
